--- a/.github/workflows/multi-arch-build.yml
+++ b/.github/workflows/multi-arch-build.yml
@@ -1,4 +1,4 @@
-name: Multi-Architecture Docker Build
+name: Multi-Architecture Docker Build (No Tests)
 
 on:
   push:
@@ -19,33 +19,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18, 20]
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
-
-      - name: Run integration tests
-        run: npm run test:integration --if-present
-
   build-multiarch:
-    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
